website/versioned_docs/version-0.2.2/reference/engine/verbs.md
<!-- Code generated by gomarkdoc. DO NOT EDIT -->

# verbs

```go
import "github.com/Bugs5382/go-saga-orchestration/engine/verbs"
```

Package verbs holds built\-in verb handlers. The \`end\` verb is dispatched inline by the coordinator; the other verbs are dispatched via the registry that maps StepType → Handler. This file exists to anchor the package and the interface shape that registry will use.

## Variables

<a name="ErrSagaCancelled"></a>ErrSagaCancelled is returned by the cancel verb for a self\-cancel. Advance transitions the run to cancelled \(terminal\) and stops the loop.

```go
var ErrSagaCancelled = errors.New("saga cancelled")
```

<a name="ErrSagaPaused"></a>ErrSagaPaused signals "the verb successfully suspended the saga; do not advance, do not fail." Coordinator recognises this and ACKs the RabbitMQ message without transitioning state to failed. The verb is responsible for persisting the pause state \(wakeup\_at / awaited\_signal / awaited\_event\_\*\) via the store BEFORE returning this sentinel.

```go
var ErrSagaPaused = errors.New("saga paused")
```

<a name="GroupToFeature"></a>GroupToFeature maps each license\-group name to its feature flag. "common" maps to the empty string — that's the sentinel for "no gate, always allowed".

```go
var GroupToFeature = map[string]string{
    "common":               "",
    "observability":        "wf.observability",
    "external_io_advanced": "wf.external_io",
    "waits":                "wf.timers",
    "events_and_signals":   "wf.event_driven",
    "human_interaction":    "wf.user_tasks",
    "parallel_control":     "wf.parallel",
    "loops_and_recovery":   "wf.loops_recovery",
    "compositions":         "wf.compositions",
}
```

<a name="EvalQuorumNCEL"></a>
## func EvalQuorumNCEL

```go
func EvalQuorumNCEL(expr string, vars map[string]any) (any, error)
```

EvalQuorumNCEL evaluates expr as a CEL expression against vars and returns the result as any \(expected to be numeric — int64 from CEL\). Mirrors evalBranchesCEL but expects a scalar numeric result. Exported for use by the engine's checkParentJoin path in advance.go.

<a name="LicenseGroupForStep"></a>
## func LicenseGroupForStep

```go
func LicenseGroupForStep(step domain.Step, regGroup string) string
```

LicenseGroupForStep returns the effective license\-group for the given step. Most verbs have a static group \(set in registry.Default via RegistryEntry.LicenseGroup\). One exception: http\_request has a dynamic group depending on its inputs — GET with no secret\_ref is \`common\`; everything else is \`external\_io\_advanced\`. This function applies that dynamic override.

<a name="ToInt"></a>
## func ToInt

```go
func ToInt(v any) (int, bool)
```

ToInt coerces v to an int. Accepts int, int64, and float64 \(JSON\-decoded numbers\). Returns \(0, false\) for any other type. Exported so the engine package can reuse it when reading quorum\_n from a step's Inputs.

<a name="ToIntFromAny"></a>
## func ToIntFromAny

```go
func ToIntFromAny(v any) (int, bool)
```

ToIntFromAny coerces v to int, accepting the same types as ToInt plus int32 and uint64 edge cases from CEL numeric coercions. Exported for use by the engine's checkParentJoin path in advance.go.

<a name="ActionDispatchPublisher"></a>
## type ActionDispatchPublisher

ActionDispatchPublisher is a separate interface for publishing action dispatch messages to RabbitMQ. Kept separate so existing test pubs that only implement PublishSagaAdvance do not need to change.

```go
type ActionDispatchPublisher interface {
    PublishActionDispatch(ctx context.Context, routingKey string, payload []byte) error
}
```

<a name="ActionPayload"></a>
## type ActionPayload

ActionPayload is the body of a saga.advance → action dispatch message. Workers deserialise this to drive their handler.

```go
type ActionPayload struct {
    RunID          string         `json:"run_id"`
    StepID         string         `json:"step_id"`
    Attempt        int            `json:"attempt"`
    IdempotencyKey string         `json:"idempotency_key"`
    Action         string         `json:"action"` // "<service>.<action_name>"
    Inputs         map[string]any `json:"inputs"`
    DryRun         bool           `json:"dry_run,omitempty"`
}
```

<a name="ActionVerb"></a>
## type ActionVerb

ActionVerb dispatches a registered action to a worker via RabbitMQ.

Inputs:

- step.Action \(required, string\): "\<service\>.\<action\_name\>". Must contain a dot.
- step.Inputs \(any\): forwarded verbatim to the worker.

The verb:

1. Bumps current\_attempt \+ persists the awaiting state via MarkAwaitingAction.
2. Publishes to ExchangeAction with routing key = step.Action.
3. Returns ErrSagaPaused.

The worker's Complete/Error reply \(via gRPC ExecuteStep\) routes through CompleteAction / FailAction store hooks to resume or fail the saga.

```go
type ActionVerb struct {
    S         store.Store
    Publisher ActionDispatchPublisher
}
```

<a name="ActionVerb.Execute"></a>
### func \(ActionVerb\) Execute

```go
func (v ActionVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute validates the action name, persists the awaiting\-action state with a bumped attempt, publishes the dispatch message to the worker, and returns ErrSagaPaused so the saga waits for the worker's reply.

<a name="AssertVerb"></a>
## type AssertVerb

AssertVerb evaluates a CEL expression; on false returns an error. Inputs:

- "expr" \(required, string\)
- "code" \(optional, string; default "assertion\_failed"\)

```go
type AssertVerb struct{}
```

<a name="AssertVerb.Execute"></a>
### func \(AssertVerb\) Execute

```go
func (AssertVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute compiles and evaluates the CEL expr against run.Variables and returns an error tagged with code when the result is not true.

<a name="CancelVerb"></a>
## type CancelVerb

CancelVerb cancels a run. With no run\_id \(or run\_id == the current run\) it self\-cancels: returns ErrSagaCancelled and the engine sets state=cancelled. With a different run\_id it cancels that target run and the current run continues to Next. Inputs: "run\_id" \(optional, string\), "reason" \(optional\).

```go
type CancelVerb struct {
    S   store.Store
    // JoinChecker, when set, re-evaluates a cancelled target's parent join so a
    // parent paused on a parallel/sub_saga join is woken. Nil-safe.
    JoinChecker ParentJoinChecker
}
```

<a name="CancelVerb.Execute"></a>
### func \(CancelVerb\) Execute

```go
func (v CancelVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```



<a name="CollectInputVerb"></a>
## type CollectInputVerb

CollectInputVerb is the same shape as ManualApprovalVerb but \`form\_schema\` is REQUIRED. Use this verb when the workflow needs structured data from the user \(e.g., remediation plan, additional context\) — vs. manual\_approval which is typically approve/reject.

Inputs:

- "assignee" \(required, string\)
- "form\_schema" \(required, map\[string\]any\)
- "due\_in" \(optional, string Go duration\)

```go
type CollectInputVerb struct {
    S     store.Store
    Clock clock.Clock
}
```

<a name="CollectInputVerb.Execute"></a>
### func \(CollectInputVerb\) Execute

```go
func (v CollectInputVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute creates a user task carrying the required form schema, then pauses the saga awaiting the task's submitted signal, returning ErrSagaPaused.

<a name="DecisionVerb"></a>
## type DecisionVerb

DecisionVerb evaluates a stored rule and returns its output map. The engine reads result\["branch"\] to pick step.Branches\[...\].Next. Inputs:

- "rule\_id" \(required, string\)
- "inputs\_map" \(optional, map\[string\]string\): narrow the inputs passed to the rule by mapping rule\-input\-name → variable\-name. If omitted, run.Variables is passed directly.

```go
type DecisionVerb struct {
    S store.Store
}
```

<a name="DecisionVerb.Execute"></a>
### func \(DecisionVerb\) Execute

```go
func (v DecisionVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute loads the published rule, evaluates it against the \(optionally remapped\) inputs, records a rule\-evaluated event, and returns the rule's output map.

<a name="EmitEventVerb"></a>
## type EmitEventVerb

EmitEventVerb publishes an event via the configured EventEmitter. Inputs:

- "topic" \(required, string\)
- "headers" \(optional, map\[string\]any \-\> stringified\)
- "payload" \(optional, map\[string\]any\)

```go
type EmitEventVerb struct {
    Emitter EventEmitter
}
```

<a name="EmitEventVerb.Execute"></a>
### func \(EmitEventVerb\) Execute

```go
func (v EmitEventVerb) Execute(ctx context.Context, _ domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute implements Handler.

<a name="EmitSignalVerb"></a>
## type EmitSignalVerb

EmitSignalVerb sends a signal to a target run \(the send\-side of wait\_for\_signal\). If the target run is currently paused awaiting that signal, it is consumed and a saga.advance message is published so the engine resumes the target immediately.

Inputs:

- "run\_id" \(required, string\): target run UUID.
- "name" \(required, string\): signal name.
- "payload" \(optional, map\[string\]any\): arbitrary signal payload.

```go
type EmitSignalVerb struct {
    S         store.Store
    Publisher Publisher
}
```

<a name="EmitSignalVerb.Execute"></a>
### func \(EmitSignalVerb\) Execute

```go
func (v EmitSignalVerb) Execute(ctx context.Context, _ domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute implements Handler.

<a name="EndVerb"></a>
## type EndVerb

EndVerb terminates the saga successfully. The coordinator dispatches this inline today; the type is here so it can move into a registry without breaking the contract.

```go
type EndVerb struct{}
```

<a name="EndVerb.Execute"></a>
### func \(EndVerb\) Execute

```go
func (EndVerb) Execute(_ context.Context, _ domain.SagaRun, _ domain.Step) (map[string]any, error)
```

Execute returns an empty result; the coordinator handles the run\-level state transition.

<a name="ErrorVerb"></a>
## type ErrorVerb

ErrorVerb halts the saga with a non\-retryable error. Inputs:

- "code" \(required, string\)
- "message" \(optional, string\)

```go
type ErrorVerb struct{}
```

<a name="ErrorVerb.Execute"></a>
### func \(ErrorVerb\) Execute

```go
func (ErrorVerb) Execute(_ context.Context, _ domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute always returns a non\-retryable error built from the required code and optional message.

<a name="EventEmitter"></a>
## type EventEmitter

EventEmitter publishes an event other sagas/triggers can match. Real impls: an in\-process matcher \(embedded\) or a RabbitMQ publisher \(service mode\).

```go
type EventEmitter interface {
    EmitEvent(ctx context.Context, topic string, headers map[string]string, payload map[string]any) error
}
```

<a name="FilterVerb"></a>
## type FilterVerb

FilterVerb keeps list elements where expr is truthy. Inputs:

- "list" \(required, string\): CEL expression that must evaluate to a list.
- "expr" \(required, string\): CEL predicate; element bound as \`\_\`.
- "out\_var" \(required, string\): variable to write the filtered list to.

```go
type FilterVerb struct{}
```

<a name="FilterVerb.Execute"></a>
### func \(FilterVerb\) Execute

```go
func (FilterVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute evaluates the list expression, applies the predicate to each element \(bound as \`\_\`\), and writes the retained elements to out\_var.

<a name="ForeachVerb"></a>
## type ForeachVerb

ForeachVerb fans out one child run per element of a CEL\-evaluated list. PARALLEL mode runs one branch per list element. Sequential mode is intentionally deferred — use \`while\` with an explicit counter for now.

TODO\(future\-batch\): add sequential mode \(parallel: false\) — state\-machine back\-edge loop where each iteration executes the body steps one at a time, advancing via a back\-edge to re\-enter the foreach step after the body completes. For now, use \`while\` with an index counter for sequential loops.

Inputs:

- "list" \(required, string\): CEL expression evaluating to a list.
- "body" \(required, \[\]any\): step objects forming the loop body. Each child run gets the list element bound as Variables\["\_foreach\_item"\].
- "start" \(required, string\): ID of the first step inside body.
- "parallel" \(optional, bool, default true\): the only supported mode in v1 is parallel; passing false returns an error noting the deferred sequential mode.

```go
type ForeachVerb struct {
    S         store.Store
    Publisher Publisher
}
```

<a name="ForeachVerb.Execute"></a>
### func \(ForeachVerb\) Execute

```go
func (v ForeachVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute evaluates the list expression and spawns one child run per element \(each with the element bound as \_foreach\_item\), then pauses the parent awaiting the children and returns ErrSagaPaused. An empty list advances without spawning; sequential mode is rejected.

<a name="HTTPRequestVerb"></a>
## type HTTPRequestVerb

HTTPRequestVerb issues a synchronous outbound HTTP request and merges the response into Variables. Inputs:

- "method" \(optional, string; default "GET"\)
- "url" \(required, string\)
- "headers" \(optional, map\[string\]any → stringified into request headers\)
- "body" \(optional, any; JSON\-marshalled into request body\)
- "timeout\_s" \(optional, number; default 30s\)
- "secret\_ref" \(optional, string; resolves to a value set as Authorization header\)
- "out\_var" \(optional, string; default "http\_result"\). Result keys: \{out\_var\} = parsed JSON body if application/json, else raw string. \{out\_var\}\_status = int64 status code. \{out\_var\}\_headers = map\[string\]string of response headers.

```go
type HTTPRequestVerb struct {
    Secrets secrets.Resolver
    Client  *http.Client // optional; nil → constructed per-call with timeout_s
}
```

<a name="HTTPRequestVerb.Execute"></a>
### func \(HTTPRequestVerb\) Execute

```go
func (v HTTPRequestVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute issues the configured HTTP request \(resolving secret\_ref into an Authorization header when set\) and returns the parsed body, status code, and response headers keyed off out\_var.

<a name="Handler"></a>
## type Handler

Handler executes one verb. Returns the result map \(becomes the step's output for subsequent step inputs\) and an error. Built\-in verbs are pure functions of \(run, step, ctx\) — no external I/O.

```go
type Handler interface {
    Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
}
```

<a name="HandlerFunc"></a>
## type HandlerFunc

HandlerFunc adapts a plain function to the Handler interface so a custom verb can be a closure instead of a struct.

```go
type HandlerFunc func(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

<a name="HandlerFunc.Execute"></a>
### func \(HandlerFunc\) Execute

```go
func (f HandlerFunc) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute satisfies Handler.

<a name="LogVerb"></a>
## type LogVerb

LogVerb appends a saga\_run\_events row of type \`log\`. Inputs:

- "message" \(required, string\)
- "level" \(optional, string: "info" | "warn" | "error"; default "info"\)

```go
type LogVerb struct {
    S store.Store
}
```

<a name="LogVerb.Execute"></a>
### func \(LogVerb\) Execute

```go
func (v LogVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute appends a log event carrying the message and level to the run's event stream.

<a name="ManualApprovalVerb"></a>
## type ManualApprovalVerb

ManualApprovalVerb creates a user task and pauses the saga awaiting its submission via POST /api/v1/sagas/\{run\_id\}/user\_task/\{task\_id\}/submit. The submit handler appends a signal of name \`user\_task.\{task\_id\}.submitted\` which wakes this saga.

Inputs:

- "assignee" \(required, string\): user ID or role expected to submit.
- "due\_in" \(optional, string, Go duration\): sets due\_at = clock.Now\(\) \+ due\_in.
- "form\_schema" \(optional, map\[string\]any\): rendered to the assignee in the UI \(admin panel\). For manual\_approval the form is typically a simple \{approve|reject\} radio; the schema is optional.

```go
type ManualApprovalVerb struct {
    S     store.Store
    Clock clock.Clock
}
```

<a name="ManualApprovalVerb.Execute"></a>
### func \(ManualApprovalVerb\) Execute

```go
func (v ManualApprovalVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute creates a user task for the assignee and pauses the saga awaiting its submitted signal, returning ErrSagaPaused.

<a name="MapVerb"></a>
## type MapVerb

MapVerb transforms each element of a list via a CEL expression where the element is bound as \`\_\`. Inputs: list, expr, out\_var \(all required strings\).

```go
type MapVerb struct{}
```

<a name="MapVerb.Execute"></a>
### func \(MapVerb\) Execute

```go
func (MapVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute evaluates the list expression and applies the map expression to each element \(bound as \`\_\`\), writing the resulting list to out\_var.

<a name="MergeVerb"></a>
## type MergeVerb

MergeVerb deep\-merges a CEL\-evaluated map into a target variable. Inputs:

- "from" \(required, string\): CEL expression that must evaluate to a map.
- "into" \(required, string\): target variable name \(dotted ok\). The target's existing value is merged with the from value \(last\-write\-wins per key, recursively for nested maps\).

```go
type MergeVerb struct{}
```

<a name="MergeVerb.Execute"></a>
### func \(MergeVerb\) Execute

```go
func (MergeVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute evaluates the from expression to a map and returns dotted\-key entries rooted at into, deep\-merging nested maps.

<a name="MetricEmitVerb"></a>
## type MetricEmitVerb

MetricEmitVerb appends a saga\_run\_events row of type \`metric\`. Inputs:

- "name" \(required, string\)
- "value" \(required, number\)
- "labels" \(optional, map\[string\]string\)

Prometheus side\-channel wiring is future work; for now the event is enough — admin UI surfaces metric events in the run inspector.

```go
type MetricEmitVerb struct {
    S store.Store
}
```

<a name="MetricEmitVerb.Execute"></a>
### func \(MetricEmitVerb\) Execute

```go
func (v MetricEmitVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute appends a metric event carrying the name, value, and labels to the run's event stream.

<a name="NoopVerb"></a>
## type NoopVerb

NoopVerb does nothing. Useful in tests and during authoring to hold a place in the workflow graph without side effects.

```go
type NoopVerb struct{}
```

<a name="NoopVerb.Execute"></a>
### func \(NoopVerb\) Execute

```go
func (NoopVerb) Execute(_ context.Context, _ domain.SagaRun, _ domain.Step) (map[string]any, error)
```

Execute does nothing and returns an empty result.

<a name="ParallelVerb"></a>
## type ParallelVerb

ParallelVerb fans out N child runs and pauses the parent until the join strategy is satisfied. Inputs:

- "branches" \(required, \[\]any or CEL string\): each element is a workflow\-fragment object \{"start": "step\_id", "steps": \[...step objects...\]\}. Short\-form \{"type": "...", "inputs": \{...\}\} is also accepted and normalised on the fly. When a string is supplied it is evaluated as a CEL expression against run.Variables and the result must be a non\-empty list. Each branch becomes a child run.
- "join\_strategy" \(optional, string, default "all"\): "all" waits for every branch to reach a terminal state. "quorum" wakes the parent once quorum\_n branches have succeeded \(remaining branches keep running but no longer gate the parent\). "first\_terminal" and other values are rejected.
- "quorum\_n" \(required when join\_strategy=="quorum"\): positive integer, must be ≤ len\(branches\).

The coordinator's child\-terminal hook \(engine/advance.go\) wakes the parent when all children are terminal. The parent then advances to step.Next.

```go
type ParallelVerb struct {
    S         store.Store
    Publisher Publisher
}
```

<a name="ParallelVerb.Execute"></a>
### func \(ParallelVerb\) Execute

```go
func (v ParallelVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute resolves the branches \(literal list or CEL expression\), validates the join strategy, spawns one child run per branch, then pauses the parent awaiting the join and returns ErrSagaPaused.

<a name="ParentJoinChecker"></a>
## type ParentJoinChecker

ParentJoinChecker re\-evaluates a parent's parallel/sub\_saga join after a child reaches a terminal state, waking the parent if the join is now satisfied. The Coordinator implements it; CancelVerb uses it so cancelling a target child does not leave a parent paused on a join.

```go
type ParentJoinChecker interface {
    CheckParentJoin(ctx context.Context, run domain.SagaRun)
}
```

<a name="Publisher"></a>
## type Publisher

Publisher is the minimum surface verbs need to enqueue saga.advance for child runs. Real impl: mq.Publisher. Tests: a fake. Structurally compatible with engine.Publisher so \*mq.Publisher satisfies both.

```go
type Publisher interface {
    PublishSagaAdvance(ctx context.Context, runID string) error
}
```

<a name="Registry"></a>
## type Registry

Registry maps step.Type → entry. The engine's Advance loop looks up the entry, applies the license gate \(if non\-common\), then runs Handler.Execute.

```go
type Registry map[domain.StepType]RegistryEntry
```

<a name="Default"></a>
### func Default

```go
func Default(s store.Store, clk clock.Clock, sec secrets.Resolver, pub Publisher, actionPub ActionDispatchPublisher, emitter EventEmitter) Registry
```

Default builds the verb registry with license groups attached. The store/clock/secrets/publisher deps are threaded to verbs that need them. The \`end\` step is intentionally NOT in the registry — Advance short\-circuits it.

actionPub is the publisher for action dispatch messages. Pass nil in tests that do not exercise action steps — ActionVerb checks for nil.

emitter is the EventEmitter used by emit\_event steps. Pass nil in tests that do not exercise emit\_event — EmitEventVerb checks for nil.

<a name="RegistryEntry"></a>
## type RegistryEntry

RegistryEntry is what each registered StepType resolves to. LicenseGroup lets the engine gate dispatch by the tenant's license features.

```go
type RegistryEntry struct {
    Handler      Handler
    LicenseGroup string // canonical group name, e.g. "external_io_advanced"
}
```

<a name="SetVarVerb"></a>
## type SetVarVerb

SetVarVerb writes a value to a variable. Inputs:

- "out\_var" \(required, string\): the destination variable name \(dotted keys allowed for nested scope writes\).
- "value" \(optional\): a literal — written through unchanged.
- "expr" \(optional\): a CEL expression evaluated against the current run.Variables; the result is written.

Exactly one of "value" or "expr" must be set. If both are set, "expr" wins \(so workflow authors can swap a literal for an expression without renaming the key\).

```go
type SetVarVerb struct{}
```

<a name="SetVarVerb.Execute"></a>
### func \(SetVarVerb\) Execute

```go
func (SetVarVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute writes either the evaluated expr or the literal value to out\_var, with expr taking precedence when both are present.

<a name="SpawnSagaVerb"></a>
## type SpawnSagaVerb

SpawnSagaVerb starts a named workflow as a fire\-and\-forget child. The parent continues immediately to step.Next without pausing. The child runs independently; its outcome doesn't block the parent.

Implementation note: SpawnChildRun is reused \(same as sub\_saga\) so the child carries a ParentRunID for audit purposes. The "fire\-and\-forget" property is achieved by NOT calling UpdateRunState\(paused\) and NOT returning ErrSagaPaused — the parent advances normally.

The coordinator's checkParentJoin guard \(engine/advance.go\) checks that the parent is still paused on the spawning step before waking it, so a fire\-and\-forget child terminating never prematurely wakes a parent that is paused on a later step.

Inputs:

- "workflow\_id" \(required, string\): the child workflow's stable ID.
- "inputs" \(optional, map\[string\]any\): inputs passed to the child.

```go
type SpawnSagaVerb struct {
    S         store.Store
    Publisher Publisher
}
```

<a name="SpawnSagaVerb.Execute"></a>
### func \(SpawnSagaVerb\) Execute

```go
func (v SpawnSagaVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute resolves and spawns the named workflow as a fire\-and\-forget child, then returns an empty result so the parent advances without pausing.

<a name="SubSagaVerb"></a>
## type SubSagaVerb

SubSagaVerb starts a named workflow as a child saga and pauses the parent until the child reaches a terminal state. The coordinator's child\-terminal hook \(engine/advance.go:checkParentJoin\) wakes the parent when all children of this step terminate.

Inputs:

- "workflow\_id" \(required, string\): the child workflow's stable ID.
- "inputs" \(optional, map\[string\]any\): inputs passed to the child.

Note: sub\_saga reuses the same child\-run \+ WakeFromExternal mechanism as \`parallel\` — by definition there's exactly one "branch" \(the child\).

```go
type SubSagaVerb struct {
    S         store.Store
    Publisher Publisher
}
```

<a name="SubSagaVerb.Execute"></a>
### func \(SubSagaVerb\) Execute

```go
func (v SubSagaVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute resolves and spawns the named workflow as a child saga, then pauses the parent awaiting the child's terminal state and returns ErrSagaPaused.

<a name="SwitchVerb"></a>
## type SwitchVerb

SwitchVerb evaluates a CEL expression over run.Variables to a string branch key and returns \{"branch": key\}; the engine routes that to step.Branches\[key\].Next. Inputs:

- "expr" \(required, CEL string\) must evaluate to a string.

```go
type SwitchVerb struct{}
```

<a name="SwitchVerb.Execute"></a>
### func \(SwitchVerb\) Execute

```go
func (SwitchVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute compiles and evaluates the CEL expr against run.Variables, asserts the result is a string, and returns \{"branch": \<result\>\}.

<a name="TransformVerb"></a>
## type TransformVerb

TransformVerb evaluates a CEL expression against current Variables and writes the result to out\_var. Inputs:

- "expr" \(required, string\): CEL expression.
- "out\_var" \(required, string\): variable name to write to \(dotted ok\).

```go
type TransformVerb struct{}
```

<a name="TransformVerb.Execute"></a>
### func \(TransformVerb\) Execute

```go
func (TransformVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute evaluates the CEL expr against run.Variables and writes the result to out\_var.

<a name="TryCatchVerb"></a>
## type TryCatchVerb

TryCatchVerb pushes a try\_catch frame onto the saga's stack. When a step inside the try body errors, the coordinator pops the top frame and advances to the catch step \(with the error context written to Variables.\_error\). On success, the body's last step's \`next\` should point to whatever comes after the try block — the frame stays on the stack until the saga terminates \(acceptable for v1 since max nesting depth is 3 per the publish\-time validator\).

Inputs:

- "try" \(required, \[\]any of step IDs\): metadata used by the validator \(engine.ValidateDefinition\) to reject parallel\-in\-try. Not consumed by the runtime — author wires step.Next to the first try step.
- "catch" \(required, string\): step ID to jump to on error.

```go
type TryCatchVerb struct {
    S store.Store
}
```

<a name="TryCatchVerb.Execute"></a>
### func \(TryCatchVerb\) Execute

```go
func (v TryCatchVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute pushes a try\_catch frame \(recording the catch step\) onto the run's stack and returns an empty result so the engine routes to the first try step.

<a name="WaitDurationVerb"></a>
## type WaitDurationVerb

WaitDurationVerb pauses the saga for a fixed duration. Inputs:

- "duration" \(required, string\): Go duration syntax e.g. "5s", "1h30m".

Persists wakeup\_at on the saga run and returns ErrSagaPaused; the coordinator catches the sentinel, appends EventStepPaused, and ACKs the queue message. The timer dispatcher polls for due wakeups and republishes saga.advance.

```go
type WaitDurationVerb struct {
    S     store.Store
    Clock clock.Clock
}
```

<a name="WaitDurationVerb.Execute"></a>
### func \(WaitDurationVerb\) Execute

```go
func (v WaitDurationVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute parses the duration, persists wakeup\_at = now \+ duration on the run, and returns ErrSagaPaused for the timer dispatcher to resume.

<a name="WaitForEventVerb"></a>
## type WaitForEventVerb

WaitForEventVerb pauses the saga until a RabbitMQ event with a matching topic \+ header subset arrives. v1 only does string\-equality header filtering \(CEL on payload deferred to a later batch\).

Inputs:

- "topic" \(required, string\): RabbitMQ routing key the saga awaits.
- "headers" \(optional, map\[string\]any\): header→value pairs the incoming event's headers must all match \(values stringified\).
- "timeout\_s" \(optional, number\): max seconds to wait. On timeout the engine routes to the step's "timeout" branch if defined, else to Next. Omitted = wait indefinitely.

```go
type WaitForEventVerb struct {
    S     store.Store
    Clock clock.Clock
}
```

<a name="WaitForEventVerb.Execute"></a>
### func \(WaitForEventVerb\) Execute

```go
func (v WaitForEventVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute persists the awaited topic, header filter, and optional timeout deadline on the run and returns ErrSagaPaused until a matching event arrives or the deadline elapses.

<a name="WaitForSignalVerb"></a>
## type WaitForSignalVerb

WaitForSignalVerb pauses the saga until a named external signal arrives via POST /api/v1/sagas/\{run\_id\}/signal/\{name\}. Inputs:

- "name" \(required, string\): signal name to await.
- "timeout\_s" \(optional, float64\): max seconds to wait before the timer dispatcher wakes the saga regardless. If omitted the saga waits indefinitely \(no wakeup\_at set by the verb itself; the signal handler sets wakeup\_at=now\(\) when it arrives\).

On signal arrival: TryConsumeAwaitedSignal clears the await markers and sets wakeup\_at=now\(\). The signal REST handler publishes saga.advance; Advance sees paused\+due\-wakeup and resumes from the next step uniformly.

```go
type WaitForSignalVerb struct {
    S     store.Store
    Clock clock.Clock
}
```

<a name="WaitForSignalVerb.Execute"></a>
### func \(WaitForSignalVerb\) Execute

```go
func (v WaitForSignalVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute persists the awaited signal name \(and optional timeout deadline\) on the run and returns ErrSagaPaused until the signal arrives or times out.

<a name="WaitUntilVerb"></a>
## type WaitUntilVerb

WaitUntilVerb pauses the saga until a wall\-clock instant. Inputs:

- "timestamp" \(required, string\): RFC3339 timestamp \(e.g. "2026\-12\-31T23:59:00Z"\).

If the timestamp is in the past relative to the engine's clock, the verb sets wakeup\_at to clock.Now\(\) so the next timer tick wakes the saga immediately. This mirrors \`wait\_duration\` but with an absolute rather than relative deadline.

```go
type WaitUntilVerb struct {
    S     store.Store
    Clock clock.Clock
}
```

<a name="WaitUntilVerb.Execute"></a>
### func \(WaitUntilVerb\) Execute

```go
func (v WaitUntilVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute parses the RFC3339 timestamp, persists it as wakeup\_at \(clamped to now if in the past\), and returns ErrSagaPaused for the timer to resume.

<a name="WebhookEmitVerb"></a>
## type WebhookEmitVerb

WebhookEmitVerb POSTs a payload to an external URL. Inputs:

- "url" \(required, string\)
- "body" \(required, any; JSON\-marshalled into the request body\)
- "secret\_ref" \(optional, string; resolves to an HMAC\-SHA256 signing key. When present, X\-Webhook\-Sig header = "sha256=\<hex\>" of the body using the key.\)
- "timeout\_s" \(optional, number; default 15s\)
- "headers" \(optional, map\[string\]any → string headers\)
- "async" \(optional, bool; default false. When true: fire request in a goroutine, return immediately without awaiting response. Failures are logged but not surfaced. Use for fire\-and\-forget notifications.\)
- "out\_var" \(optional, string; default "webhook\_result"\). Only populated on synchronous \(non\-async\) success: \{out\_var\}\_status = int64 code.

```go
type WebhookEmitVerb struct {
    Secrets secrets.Resolver
    Client  *http.Client
}
```

<a name="WebhookEmitVerb.Execute"></a>
### func \(WebhookEmitVerb\) Execute

```go
func (v WebhookEmitVerb) Execute(ctx context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute POSTs the JSON\-marshalled body to the URL \(optionally HMAC\-signed\). In async mode it fires the request in a goroutine and returns immediately; otherwise it awaits the response and returns the status code under out\_var.

<a name="WhileVerb"></a>
## type WhileVerb

WhileVerb evaluates a CEL condition and chooses a branch. Inputs:

- "condition" \(required, string\): CEL expression evaluated against Variables.
- "max\_iterations" \(optional, number, default 100, hard cap 10000\): if the per\-step iteration counter reaches this, the verb returns an error. Cap prevents runaway loops.

The verb returns a \{"branch": "continue"|"exit"\} output map. The workflow author wires step.Branches:

- "continue" → next: body's first step.
- "exit" → next: step after the loop.

The body's last step should point its next back at this while step so the loop closes. The iteration counter persists at Variables.\_while.\{step.ID\}.iter \(int64\).

```go
type WhileVerb struct{}
```

<a name="WhileVerb.Execute"></a>
### func \(WhileVerb\) Execute

```go
func (WhileVerb) Execute(_ context.Context, run domain.SagaRun, step domain.Step) (map[string]any, error)
```

Execute evaluates the condition, increments the persisted iteration counter, and returns branch "continue" \(condition true\) or "exit" \(false\). It errors once the iteration count reaches max\_iterations.

Generated by [gomarkdoc](<https://github.com/princjef/gomarkdoc>)
